--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
             android:name=".view.activity.PicDrawColorActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".view.activity.DataBaseActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
